# SlangIssueRepro-8882

./: CMakeLists.txt
.github/workflows/: run.yml
slang/include/: slang-tag-version.h
slang/linux/lib/: libgfx.so.0.2025.21  libslang-rt.so.0.2025.21
src/: main.cpp
